--- a/client/src/components/Rewards/Rewards.scss
+++ b/client/src/components/Rewards/Rewards.scss
@@ -31,7 +31,7 @@
         display: block;
         width: 80%;
         padding: 1rem 0;
-        background-color: black;
+        background-color: #11365F;
         color: white;
         font-size: 16px;
         margin: 1rem 10vw;
