--- a/client/src/components/DrawAnnotations/DrawAnnotations.scss
+++ b/client/src/components/DrawAnnotations/DrawAnnotations.scss
@@ -1,7 +1,7 @@
 .drawAnno__button {
     text-decoration: none;
     width: 80%;
-    padding: 1rem 0;
+    padding: 1rem 4rem;
     background-color: #11365F;
     color: white;
     font-size: 16px;
